--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,25 @@ html,
 body {
   height: 100%;
 }
+
+@media (min-width: 768px) {
+  .fab-desktop {
+    bottom: 32px;
+    right: 32px;
+  }
+  .feature-desktop {
+    bottom: 32px;
+    right: 32px;
+  }
+}
+
+@media (max-width: 768px) {
+  .fab-mobile {
+    bottom: 24px;
+    right: 24px;
+  }
+  .feature-mobile {
+    bottom: 24px;
+    right: 24px;
+  }
+}
